# Project

./: .env  .env.txt  CMakeLists.txt  Dockerfile  docker-compose.yml  go.mod  go.sum  init.sql  requirements.txt
db/: db.go
github/: github.go
main/: main.go
qr/: qr.go
web_back/: .env  Account.html  Home.html  Tests.html  account.css  account.js  backend.py  code.html  script.js  style.css  test.css  test.js
web_back/utils/: database.py  logger.py  rate_limiter.py  token_cache.py
yandex/: yandex.go
